test/fail/basic_syntax/bad_typecast.lly
#[
SyntaxError: Cannot cast type 'integer' to type 'string'.
    from bad_typecast.lly:6
]#

10.@(string)
